--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "mvvm-room-retrofit"
+rootProject.name = "quotify_mvvm_retrofit"
 include ':app'
